deploy: 38e3fd79505d263946e9e792cd2bc780a0a29fa0

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name=googlebot content="index,follow">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/>
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.541b9cfb0e467153e1f01434e3503dc8f1357e280f848ec9df02ddb8ad26a341.css>
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.5927c94c00c2db9abc3f030c563398a9f571f09b292e2cb20bdbdd6b8ea5c07f.css>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css>
 </head>
 <body class=body>
@@ -61,6 +61,146 @@ Hugo用ブログテーマ「Salt」
 <h1 class=index__title>新着</h1>
 </div>
 <div class=index__articleCardList>
+<article class=partials__articleCard>
+<div class=partials__articleCard__inner>
+<a href=https://hugo-theme-salt.okdyy75.com/article/sample/2/ class=partials__articleCard__link></a>
+<img src=https://hugo-theme-salt.okdyy75.com/article/sample/2/thumbnail_hu4744dbaf07a887c7366e50ea4ac12e19_14416_320x180_fill_q75_h2_box_center_3.webp alt=自作ショートコードcustom-figureのサンプル loading=lazy class=partials__articleCard__thumbnail>
+<h4 class=partials__articleCard__title>
+自作ショートコードcustom-figureのサンプル
+</h4>
+<ul class=partials__tagList>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%B7%E3%83%A7%E3%83%BC%E3%83%88%E3%82%B3%E3%83%BC%E3%83%89 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>ショートコード
+</a>
+</li>
+</ul>
+<div class=partials__articleCard__description>
+figureショートコードをカスタムした自作ショートコードのサンプルです 元画像は512x512です Resize スイカ Fit スイカ Fill スイカ
+</div>
+</div>
+</article>
+<article class=partials__articleCard>
+<div class=partials__articleCard__inner>
+<a href=https://hugo-theme-salt.okdyy75.com/article/category2/1/ class=partials__articleCard__link></a>
+<img src=https://hugo-theme-salt.okdyy75.com/image/default_noimage_hu6fe3b5ac74af77aa92279c364bc8fc3f_5361_320x180_fill_q75_h2_box_center_3.webp alt=カテゴリー2の記事1 loading=lazy class=partials__articleCard__thumbnail>
+<h4 class=partials__articleCard__title>
+カテゴリー2の記事1
+</h4>
+<ul class=partials__tagList>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B03 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ3
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B04 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ4
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B05 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ5
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B06 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ6
+</a>
+</li>
+</ul>
+<div class=partials__articleCard__description>
+カテゴリー2の記事1です
+</div>
+</div>
+</article>
+<article class=partials__articleCard>
+<div class=partials__articleCard__inner>
+<a href=https://hugo-theme-salt.okdyy75.com/article/category1/1/ class=partials__articleCard__link></a>
+<img src=https://hugo-theme-salt.okdyy75.com/image/default_noimage_hu6fe3b5ac74af77aa92279c364bc8fc3f_5361_320x180_fill_q75_h2_box_center_3.webp alt=カテゴリー1の記事1 loading=lazy class=partials__articleCard__thumbnail>
+<h4 class=partials__articleCard__title>
+カテゴリー1の記事1
+</h4>
+<ul class=partials__tagList>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B01 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ1
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B02 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ2
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B03 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ3
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B04 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ4
+</a>
+</li>
+</ul>
+<div class=partials__articleCard__description>
+カテゴリー1の記事1です
+</div>
+</div>
+</article>
+<article class=partials__articleCard>
+<div class=partials__articleCard__inner>
+<a href=https://hugo-theme-salt.okdyy75.com/article/test/1/ class=partials__articleCard__link></a>
+<img src=https://hugo-theme-salt.okdyy75.com/image/default_noimage_hu6fe3b5ac74af77aa92279c364bc8fc3f_5361_320x180_fill_q75_h2_box_center_3.webp alt=マークダウン表示確認 loading=lazy class=partials__articleCard__thumbnail>
+<h4 class=partials__articleCard__title>
+マークダウン表示確認
+</h4>
+<ul class=partials__tagList>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%83%86%E3%82%B9%E3%83%88 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>テスト
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>サンプル
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%83%9E%E3%83%BC%E3%82%AF%E3%83%80%E3%82%A6%E3%83%B3 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>マークダウン
+</a>
+</li>
+</ul>
+<div class=partials__articleCard__description>
+Block Elements Headers 見出し 先頭に#をレベルの数だけ記述します。 # 見出し1 ## 見出し2 ### 見出し3 #### 見出し4 ##### 見出し5 ###### 見出し6 見出し1 見出し2 見出し3 見出し4 見出し5 見出し6 Block 段落 空白行を挟むことで段落となります。 段落
+</div>
+</div>
+</article>
+<article class=partials__articleCard>
+<div class=partials__articleCard__inner>
+<a href=https://hugo-theme-salt.okdyy75.com/article/sample/1/ class=partials__articleCard__link></a>
+<img src=https://hugo-theme-salt.okdyy75.com/article/sample/1/thumbnail_huf5d7724b65066df522cf2ab6e264ad1b_20603_320x180_fill_q75_h2_box_center_3.webp alt=サンプル記事① loading=lazy class=partials__articleCard__thumbnail>
+<h4 class=partials__articleCard__title>
+サンプル記事①
+</h4>
+<ul class=partials__tagList>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>サンプル
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%B5%E3%83%A0%E3%83%8D%E4%BB%98%E3%81%8D class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>サムネ付き
+</a>
+</li>
+</ul>
+<div class=partials__articleCard__description>
+サンプル記事①です
+</div>
+</div>
+</article>
 </div>
 </div>
 </section>
@@ -116,10 +256,15 @@ Z
 </h4>
 <a href=/information>
 <div>
+20xx年x月x日
+サイトを作成しました
 </div>
 </a>
 </nav>
 <nav class=partials__sidebar__menu>
+<h3 class=partials__sidebar__menu__title>
+メニュー
+</h3>
 <ul class=partials__sidebar__menu__items>
 <li class=partials__sidebar__menu__item>
 <a href=/categories/%e3%82%b5%e3%83%b3%e3%83%97%e3%83%ab class=partials__sidebar__menu__itemLink>
@@ -208,6 +353,51 @@ Z
 新着記事
 </h3>
 <ul class=partials__sidebar__newArticle__items>
+<li class=partials__sidebar__newArticle__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/sample/2/ class=partials__sidebar__newArticle__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/sample/2/thumbnail_hu4744dbaf07a887c7366e50ea4ac12e19_14416_192x108_fill_q75_h2_box_center_3.webp alt=自作ショートコードcustom-figureのサンプル loading=lazy class=partials__sidebar__newArticle__itemThumbnail>
+<div class=partials__sidebar__newArticle__itemTitle>
+自作ショートコードcustom-figureのサンプル
+</div>
+</a>
+</li>
+</li>
+<li class=partials__sidebar__newArticle__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/category2/1/ class=partials__sidebar__newArticle__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/image/default_noimage_hu6fe3b5ac74af77aa92279c364bc8fc3f_5361_192x108_fill_q75_h2_box_center_3.webp alt=カテゴリー2の記事1 loading=lazy class=partials__sidebar__newArticle__itemThumbnail>
+<div class=partials__sidebar__newArticle__itemTitle>
+カテゴリー2の記事1
+</div>
+</a>
+</li>
+</li>
+<li class=partials__sidebar__newArticle__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/category1/1/ class=partials__sidebar__newArticle__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/image/default_noimage_hu6fe3b5ac74af77aa92279c364bc8fc3f_5361_192x108_fill_q75_h2_box_center_3.webp alt=カテゴリー1の記事1 loading=lazy class=partials__sidebar__newArticle__itemThumbnail>
+<div class=partials__sidebar__newArticle__itemTitle>
+カテゴリー1の記事1
+</div>
+</a>
+</li>
+</li>
+<li class=partials__sidebar__newArticle__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/test/1/ class=partials__sidebar__newArticle__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/image/default_noimage_hu6fe3b5ac74af77aa92279c364bc8fc3f_5361_192x108_fill_q75_h2_box_center_3.webp alt=マークダウン表示確認 loading=lazy class=partials__sidebar__newArticle__itemThumbnail>
+<div class=partials__sidebar__newArticle__itemTitle>
+マークダウン表示確認
+</div>
+</a>
+</li>
+</li>
+<li class=partials__sidebar__newArticle__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/sample/1/ class=partials__sidebar__newArticle__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/sample/1/thumbnail_huf5d7724b65066df522cf2ab6e264ad1b_20603_192x108_fill_q75_h2_box_center_3.webp alt=サンプル記事① loading=lazy class=partials__sidebar__newArticle__itemThumbnail>
+<div class=partials__sidebar__newArticle__itemTitle>
+サンプル記事①
+</div>
+</a>
+</li>
+</li>
 </ul>
 </nav>
 <nav class=partials__sidebar__category>
@@ -215,6 +405,50 @@ Z
 カテゴリー
 </h3>
 <ul class=partials__sidebar__category__items>
+<li class=partials__sidebar__category__item>
+<a href=/categories/%e3%82%b5%e3%83%b3%e3%83%97%e3%83%ab class=partials__sidebar__category__itemLink>
+<div>
+<i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
+サンプル
+</div>
+<div class=partials__sidebar__category__itemCount>
+2
+</div>
+</a>
+</li>
+<li class=partials__sidebar__category__item>
+<a href=/categories/%e3%82%ab%e3%83%86%e3%82%b4%e3%83%aa%e3%83%bc1 class=partials__sidebar__category__itemLink>
+<div>
+<i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
+カテゴリー1
+</div>
+<div class=partials__sidebar__category__itemCount>
+1
+</div>
+</a>
+</li>
+<li class=partials__sidebar__category__item>
+<a href=/categories/%e3%82%ab%e3%83%86%e3%82%b4%e3%83%aa%e3%83%bc2 class=partials__sidebar__category__itemLink>
+<div>
+<i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
+カテゴリー2
+</div>
+<div class=partials__sidebar__category__itemCount>
+1
+</div>
+</a>
+</li>
+<li class=partials__sidebar__category__item>
+<a href=/categories/%e3%83%86%e3%82%b9%e3%83%88 class=partials__sidebar__category__itemLink>
+<div>
+<i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
+テスト
+</div>
+<div class=partials__sidebar__category__itemCount>
+1
+</div>
+</a>
+</li>
 </ul>
 </nav>
 <nav class=partials__sidebar__tag>
@@ -222,6 +456,61 @@ Z
 タグ
 </h3>
 <ul class=partials__tagList>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>サンプル
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B03 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ3
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B04 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ4
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%B5%E3%83%A0%E3%83%8D%E4%BB%98%E3%81%8D class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>サムネ付き
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%B7%E3%83%A7%E3%83%BC%E3%83%88%E3%82%B3%E3%83%BC%E3%83%89 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>ショートコード
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B01 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ1
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B02 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ2
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B05 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ5
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%82%BF%E3%82%B06 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>タグ6
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%83%86%E3%82%B9%E3%83%88 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>テスト
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/%E3%83%9E%E3%83%BC%E3%82%AF%E3%83%80%E3%82%A6%E3%83%B3 class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>マークダウン
+</a>
+</li>
 </ul>
 </nav>
 </div>
