deploy: 4cb71e7db226aaf7bfb2edcb247603fb0ee2d9a1

--- a/article/sample/2/index.html
+++ b/article/sample/2/index.html
@@ -15,8 +15,9 @@
 <meta name=googlebot content="index,follow">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/article/sample/2/>
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.3cde21efe41c69dee6ebdb04e0fe4f25af45ccdd7a80ecfaee5173e54fdedc25.css>
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.13a55d1bd1e1fe8a7a6b43d5451641522b600fede67ceb11b31e3ae88774a0f8.css>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css>
+<link rel=stylesheet href=/css/vendor/github-markdown-css/github-markdown.css>
 </head>
 <body class=body>
 <div class=container>
@@ -126,7 +127,7 @@ Hugo用ブログテーマ「Salt」
 </li>
 </ul>
 <img src=/article/sample/2/thumbnail_hu4744dbaf07a887c7366e50ea4ac12e19_14416_640x640_fit_q100_h2_box_3.webp alt=自作ショートコードcustom-figureのサンプル loading=lazy class=single__article__thumbnail>
-<div class=single__article__content>
+<div class="single__article__content markdown-body">
 <p>figureショートコードをカスタムした自作ショートコードのサンプルです
 元画像は512x512です</p>
 <figure>
