--- a/article/category1/1/index.html
+++ b/article/category1/1/index.html
@@ -14,8 +14,9 @@
 <meta name=googlebot content="index,follow">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/article/category1/1/>
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.3cde21efe41c69dee6ebdb04e0fe4f25af45ccdd7a80ecfaee5173e54fdedc25.css>
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.13a55d1bd1e1fe8a7a6b43d5451641522b600fede67ceb11b31e3ae88774a0f8.css>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css>
+<link rel=stylesheet href=/css/vendor/github-markdown-css/github-markdown.css>
 </head>
 <body class=body>
 <div class=container>
@@ -139,7 +140,7 @@ Hugo用ブログテーマ「Salt」
 </a>
 </li>
 </ul>
-<div class=single__article__content>
+<div class="single__article__content markdown-body">
 <p>カテゴリー1の記事1です</p>
 </div>
 </article>
