--- a/article/sample/1/index.html
+++ b/article/sample/1/index.html
@@ -15,8 +15,9 @@
 <meta name=googlebot content="index,follow">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/article/sample/1/>
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.3cde21efe41c69dee6ebdb04e0fe4f25af45ccdd7a80ecfaee5173e54fdedc25.css>
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.13a55d1bd1e1fe8a7a6b43d5451641522b600fede67ceb11b31e3ae88774a0f8.css>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css>
+<link rel=stylesheet href=/css/vendor/github-markdown-css/github-markdown.css>
 </head>
 <body class=body>
 <div class=container>
@@ -131,7 +132,7 @@ Hugo用ブログテーマ「Salt」
 </li>
 </ul>
 <img src=/article/sample/1/thumbnail_huf5d7724b65066df522cf2ab6e264ad1b_20603_640x640_fit_q100_h2_box_3.webp alt=サンプル記事① loading=lazy class=single__article__thumbnail>
-<div class=single__article__content>
+<div class="single__article__content markdown-body">
 <p>サンプル記事①です</p>
 </div>
 </article>
