deploy: 35a725edd0a8a93eea8c2f7f15f2e17adcb4c719

--- a/article/sample/no-thumbnail/index.html
+++ b/article/sample/no-thumbnail/index.html
@@ -17,6 +17,8 @@
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.f334016e1a0f9f8410acd1e02e159a5ccfde5cef3be7dc03e8a87fcc66dd1b06.css>
 <link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css>
 <link rel=stylesheet href=/css/vendor/github-markdown-css/github-markdown.css>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5GBHW5M5"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-LR5GBHW5M5',{anonymize_ip:!1})}</script>
 </head>
 <body class=body>
 <div class=container>
@@ -138,13 +140,13 @@ Hugo用ブログテーマ「Salt」
 </h3>
 <img src=https://hugo-theme-salt.okdyy75.com/image/profile_icon_hu4744dbaf07a887c7366e50ea4ac12e19_14416_200x200_fill_q75_h2_box_center_3.webp alt=icon class=partials__sidebar__profile__icon>
 <div class=partials__sidebar__profile__name>
-ユーザー名
+okdyy75
 </div>
 <div class=partials__sidebar__profile__description>
-プロフィール
+Hugo用ブログテーマ「Salt」を作りました
 </div>
 <div class=partials__snsLinks>
-<a href=https://twitter.com/twitter target=_blank class=partials__snsLinks__link--twitter>
+<a href=https://twitter.com/okdyy75 target=_blank class=partials__snsLinks__link--twitter>
 <i class="fa-lg fab fa-twitter"></i>
 </a>
 <a href=https://www.instagram.com/instagram target=_blank class=partials__snsLinks__link--instagram>
@@ -156,16 +158,16 @@ Hugo用ブログテーマ「Salt」
 <a href=https://www.youtube.com/user/YouTubeJapan target=_blank class=partials__snsLinks__link--youtube>
 <i class="fa-lg fab fa-youtube"></i>
 </a>
-<a href=https://github.com/github target=_blank class=partials__snsLinks__link--github>
+<a href=https://github.com/okdyy75 target=_blank class=partials__snsLinks__link--github>
 <i class="fa-lg fab fa-github"></i>
 </a>
-<a href=https://qiita.com/qiita target=_blank class=partials__snsLinks__link--qiita>
+<a href=https://qiita.com/okdyy75 target=_blank class=partials__snsLinks__link--qiita>
 Q
 </a>
-<a href=https://zenn.dev/zenn target=_blank class=partials__snsLinks__link--zenn>
+<a href=https://zenn.dev/okdyy75 target=_blank class=partials__snsLinks__link--zenn>
 Z
 </a>
-<a href=mailto:email@example.com target=_blank class=partials__snsLinks__link--email>
+<a href=mailto:okdyy75@gmail.com target=_blank class=partials__snsLinks__link--email>
 <i class="fa-lg fas fa-envelope"></i>
 </a>
 <a href=https://example.com target=_blank class=partials__snsLinks__link--other>
@@ -450,7 +452,7 @@ hugo
 <li><a href=https://github.com/okdyy75/hugo-theme-salt/issues>お問い合わせ</a></li></ul>
 </div>
 <p class=partials__footer__copyright>
-©&nbsp;2021&nbsp;<a href=https://example.com>作者</a>
+©&nbsp;2021&nbsp;<a href=https://github.com/okdyy75>okdyy75</a>
 </p>
 </div>
 </div>
