--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -14,11 +14,11 @@
 <meta name=googlebot content="index,follow">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/privacy-policy/>
-<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.f334016e1a0f9f8410acd1e02e159a5ccfde5cef3be7dc03e8a87fcc66dd1b06.css>
-<link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css>
-<link rel=stylesheet href=/css/vendor/github-markdown-css/github-markdown.css>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5GBHW5M5"></script>
-<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-LR5GBHW5M5',{anonymize_ip:!1})}</script>
+<link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.eb0a54f2e1d0f7b35f779a7497900a228bf49cc827ca5747b52149d10994f888.css>
+<link rel=stylesheet href=/css/vendor/@fortawesome/fontawesome-free/css/all.min.css media=print onload="this.media='all'">
+<link rel=stylesheet href=/css/vendor/github-markdown-css/github-markdown.css media=print onload="this.media='all'">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LR5GBHW5M5%20G-XXXXXXXXXX"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-LR5GBHW5M5 G-XXXXXXXXXX',{anonymize_ip:!1})}</script>
 </head>
 <body class=body>
 <div class=container>
@@ -36,16 +36,16 @@ Hugo用ブログテーマ「Salt」
 <nav id=hamburgerMenu class="close partials__header__menu">
 <ul class=partials__header__menu__items>
 <li class=partials__header__menu__item>
-<a href=/categories/salt class=partials__header__menu__itemLink>Saltの使い方</a>
+<a href=/categories/Salt%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9 class=partials__header__menu__itemLink>Saltの使い方</a>
 </li>
 <li class=partials__header__menu__item>
 <a href=/categories/%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB class=partials__header__menu__itemLink>サンプル</a>
 </li>
 <li class=partials__header__menu__item>
-<a href=/tags/hugo class=partials__header__menu__itemLink>Hugo</a>
+<a href=/tags/Hugo class=partials__header__menu__itemLink>Hugo</a>
 </li>
 <li class=partials__header__menu__item>
-<a href=/categories/go class=partials__header__menu__itemLink>Go言語</a>
+<a href=/categories/Go%E8%A8%80%E8%AA%9E class=partials__header__menu__itemLink>Go言語</a>
 </li>
 </ul>
 </nav>
@@ -119,10 +119,11 @@ Hugo用ブログテーマ「Salt」
 <aside class=sidebar>
 <div class=sidebar__inner>
 <div class=partials__sidebar>
-<nav class=partials__sidebar__profile>
-<h3 class=partials__sidebar__profile__title>
+<div class=partials__sidebar__card>
+<h3 class=partials__sidebar__title>
 プロフィール
 </h3>
+<nav class=partials__sidebar__profile>
 <img src=https://hugo-theme-salt.okdyy75.com/image/profile_icon_hu4744dbaf07a887c7366e50ea4ac12e19_14416_200x200_fill_q75_h2_box_center_3.webp alt=icon class=partials__sidebar__profile__icon>
 <div class=partials__sidebar__profile__name>
 okdyy75
@@ -160,10 +161,12 @@ Z
 </a>
 </div>
 </nav>
-<nav class=partials__sidebar__information>
-<h4 class=partials__sidebar__information__title>
+</div>
+<div class=partials__sidebar__card>
+<h4 class=partials__sidebar__title>
 お知らせ
 </h4>
+<nav class=partials__sidebar__information>
 <a href=/information>
 <div>
 2021年8月31日
@@ -171,13 +174,15 @@ Z
 </div>
 </a>
 </nav>
-<nav class=partials__sidebar__menu>
-<h3 class=partials__sidebar__menu__title>
+</div>
+<div class=partials__sidebar__card>
+<h3 class=partials__sidebar__title>
 メニュー
 </h3>
+<nav class=partials__sidebar__menu>
 <ul class=partials__sidebar__menu__items>
 <li class=partials__sidebar__menu__item>
-<a href=/categories/salt class=partials__sidebar__menu__itemLink>
+<a href=/categories/Salt%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9 class=partials__sidebar__menu__itemLink>
 <div class=partials__sidebar__menu__itemIcon>
 <i class="fa-2x fas fa-book"></i>
 </div>
@@ -187,7 +192,7 @@ Saltの使い方
 </a>
 </li>
 <li class=partials__sidebar__menu__item>
-<a href=/tags/hugo class=partials__sidebar__menu__itemLink>
+<a href=/tags/Hugo class=partials__sidebar__menu__itemLink>
 <div class=partials__sidebar__menu__itemIcon>
 <i class="fa-2x fas fa-cog"></i>
 </div>
@@ -197,7 +202,7 @@ Hugo
 </a>
 </li>
 <li class=partials__sidebar__menu__item>
-<a href=/categories/go class=partials__sidebar__menu__itemLink>
+<a href=/categories/Go%E8%A8%80%E8%AA%9E class=partials__sidebar__menu__itemLink>
 <div class=partials__sidebar__menu__itemIcon>
 <i class="fa-2x fas fa-laptop-code"></i>
 </div>
@@ -238,11 +243,22 @@ shortcode
 </li>
 </ul>
 </nav>
-<nav class=partials__sidebar__article>
-<h3 class=partials__sidebar__article__title>
+</div>
+<div class=partials__sidebar__card>
+<h3 class=partials__sidebar__title>
 新着記事
 </h3>
+<nav class=partials__sidebar__article>
 <ul class=partials__sidebar__article__items>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu1c7b0f481417007a0d381ba184b84ba6_6299_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips12選 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemTitle>
+Hugoを使い始めた人に捧げるTips12選
+</div>
+</a>
+</li>
+</li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/go/go-template/ class=partials__sidebar__article__itemLink>
 <img src=https://hugo-theme-salt.okdyy75.com/article/go/go-template/thumbnail_hu2cc68145f3781b3dc807c5718be0f3c2_1960_192x108_fill_q75_h2_box_center_3.webp alt="Go言語Tips② Hugoで使われるlayoutの正体" loading=lazy class=partials__sidebar__article__itemThumbnail>
@@ -279,21 +295,14 @@ Hugo用ブログテーマ「Salt」とは？
 </a>
 </li>
 </li>
-<li class=partials__sidebar__article__item>
-<a href=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/self-blog-card/thumbnail_hu887fde30b154802a30332967b448fbb6_8526_192x108_fill_q75_h2_box_center_3.webp alt=サイト内ブログカードを作る自作ショートコード loading=lazy class=partials__sidebar__article__itemThumbnail>
-<div class=partials__sidebar__article__itemTitle>
-サイト内ブログカードを作る自作ショートコード
-</div>
-</a>
-</li>
-</li>
 </ul>
 </nav>
-<nav class=partials__sidebar__article>
-<h3 class=partials__sidebar__article__title--pickup>
+</div>
+<div class=partials__sidebar__card>
+<h3 class=partials__sidebar__title--pickup>
 ピックアップ
 </h3>
+<nav class=partials__sidebar__article>
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
@@ -322,12 +331,23 @@ Hugo用ブログテーマ「Salt」とは？
 </a>
 </li>
 </li>
+<li class=partials__sidebar__article__item>
+<a href=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/ class=partials__sidebar__article__itemLink>
+<img src=https://hugo-theme-salt.okdyy75.com/article/hugo/tips/thumbnail_hu1c7b0f481417007a0d381ba184b84ba6_6299_192x108_fill_q75_h2_box_center_3.webp alt=Hugoを使い始めた人に捧げるTips12選 loading=lazy class=partials__sidebar__article__itemThumbnail>
+<div class=partials__sidebar__article__itemTitle>
+Hugoを使い始めた人に捧げるTips12選
+</div>
+</a>
+</li>
+</li>
 </ul>
 </nav>
-<nav class=partials__sidebar__category>
-<h3 class=partials__sidebar__category__title>
+</div>
+<div class=partials__sidebar__card>
+<h3 class=partials__sidebar__title>
 カテゴリー
 </h3>
+<nav class=partials__sidebar__category>
 <ul class=partials__sidebar__category__items>
 <li class=partials__sidebar__category__item>
 <a href=/categories/%e3%82%b5%e3%83%b3%e3%83%97%e3%83%ab class=partials__sidebar__category__itemLink>
@@ -341,10 +361,10 @@ Hugo用ブログテーマ「Salt」とは？
 </a>
 </li>
 <li class=partials__sidebar__category__item>
-<a href=/categories/salt class=partials__sidebar__category__itemLink>
+<a href=/categories/Salt%e3%81%ae%e4%bd%bf%e3%81%84%e6%96%b9 class=partials__sidebar__category__itemLink>
 <div>
 <i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
-salt
+Saltの使い方
 </div>
 <div class=partials__sidebar__category__itemCount>
 3
@@ -352,10 +372,10 @@ salt
 </a>
 </li>
 <li class=partials__sidebar__category__item>
-<a href=/categories/go class=partials__sidebar__category__itemLink>
+<a href=/categories/Go%e8%a8%80%e8%aa%9e class=partials__sidebar__category__itemLink>
 <div>
 <i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
-go
+Go言語
 </div>
 <div class=partials__sidebar__category__itemCount>
 2
@@ -363,26 +383,33 @@ go
 </a>
 </li>
 <li class=partials__sidebar__category__item>
-<a href=/categories/hugo class=partials__sidebar__category__itemLink>
+<a href=/categories/Hugo class=partials__sidebar__category__itemLink>
 <div>
 <i class="fas fa-arrow-circle-right partials__sidebar__category__itemIcon"></i>
-hugo
+Hugo
 </div>
 <div class=partials__sidebar__category__itemCount>
-1
+2
 </div>
 </a>
 </li>
 </ul>
 </nav>
-<nav class=partials__sidebar__tag>
-<h3 class=partials__sidebar__tag__title>
+</div>
+<div class=partials__sidebar__card>
+<h3 class=partials__sidebar__title>
 タグ
 </h3>
+<nav class=partials__sidebar__tag>
 <ul class=partials__tagList>
 <li class=partials__tagList__item>
-<a href=/tags/hugo class=partials__tagList__itemLink>
-<i class="fas fa-tag partials__tagList__itemIcon"></i>hugo
+<a href=/tags/Hugo class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>Hugo
+</a>
+</li>
+<li class=partials__tagList__item>
+<a href=/tags/tips class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>tips
 </a>
 </li>
 <li class=partials__tagList__item>
@@ -396,18 +423,13 @@ hugo
 </a>
 </li>
 <li class=partials__tagList__item>
-<a href=/tags/tips class=partials__tagList__itemLink>
-<i class="fas fa-tag partials__tagList__itemIcon"></i>tips
-</a>
-</li>
-<li class=partials__tagList__item>
 <a href=/tags/go-template class=partials__tagList__itemLink>
 <i class="fas fa-tag partials__tagList__itemIcon"></i>go-template
 </a>
 </li>
 <li class=partials__tagList__item>
-<a href=/tags/hugo%E3%83%86%E3%83%BC%E3%83%9E class=partials__tagList__itemLink>
-<i class="fas fa-tag partials__tagList__itemIcon"></i>hugoテーマ
+<a href=/tags/Hugo%E3%83%86%E3%83%BC%E3%83%9E class=partials__tagList__itemLink>
+<i class="fas fa-tag partials__tagList__itemIcon"></i>Hugoテーマ
 </a>
 </li>
 <li class=partials__tagList__item>
@@ -422,6 +444,7 @@ hugo
 </li>
 </ul>
 </nav>
+</div>
 </div>
 </div>
 </aside>
