--- a/about/index.html
+++ b/about/index.html
@@ -3,15 +3,16 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>このサイトについて | Hugo用ブログテーマ「Salt」</title>
-<meta name=description content="このサイトはHugo用ブログテーマ「Salt」の紹介サイトです 「Salt」はシンプルなブログを低コストで作成できる を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。">
-<meta property="og:title" content="このサイトについて | Hugo用ブログテーマ「Salt」">
-<meta property="og:description" content="このサイトはHugo用ブログテーマ「Salt」の紹介サイトです 「Salt」はシンプルなブログを低コストで作成できる を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/about/">
-<meta property="og:site_name" content="Hugo用ブログテーマ「Salt」">
+<title>このサイトについて | シンプルなHugoブログテーマ「Salt」</title>
+<meta name=description content="このサイトはシンプルなHugoブログテーマ「Salt」の紹介サイトです 「Salt」はシンプルなブログを低コストで作成できる を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。">
+<meta property="og:title" content="このサイトについて | シンプルなHugoブログテーマ「Salt」">
+<meta property="og:description" content="このサイトはシンプルなHugoブログテーマ「Salt」の紹介サイトです 「Salt」はシンプルなブログを低コストで作成できる を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/about/">
+<meta property="og:site_name" content="シンプルなHugoブログテーマ「Salt」">
 <meta property="og:type" content="article">
-<meta name=twitter:title content="このサイトについて | Hugo用ブログテーマ「Salt」">
-<meta name=twitter:description content="このサイトはHugo用ブログテーマ「Salt」の紹介サイトです 「Salt」はシンプルなブログを低コストで作成できる を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。"><meta name=robots content="index,follow">
+<meta name=twitter:title content="このサイトについて | シンプルなHugoブログテーマ「Salt」">
+<meta name=twitter:description content="このサイトはシンプルなHugoブログテーマ「Salt」の紹介サイトです 「Salt」はシンプルなブログを低コストで作成できる を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
+<meta name=generator content="Hugo 0.88.1">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/about/>
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.eb0a54f2e1d0f7b35f779a7497900a228bf49cc827ca5747b52149d10994f888.css>
@@ -27,7 +28,7 @@
 <div class=partials__header>
 <div class=partials__header__title>
 <a href=https://hugo-theme-salt.okdyy75.com>
-Hugo用ブログテーマ「Salt」
+シンプルなHugoブログテーマ「Salt」
 </a>
 <div id=hamburger class="spShow close partials__header__hamburger">
 <div class=partials__header__hamburger__line></div>
@@ -115,7 +116,7 @@ Hugo用ブログテーマ「Salt」
 </ul>
 </section>
 <div class="single__article__content markdown-body">
-<p>このサイトはHugo用ブログテーマ「Salt」の紹介サイトです</p>
+<p>このサイトはシンプルなHugoブログテーマ「Salt」の紹介サイトです</p>
 <p>「Salt」は<strong>シンプルなブログを低コストで作成できる</strong></p>
 <p>を目標にしたHugo用テーマです。名前の通り、できるだけ素材そのものを引き出せるようなシンプルなデザイン・レイアウトにしました。</p>
 </div>
@@ -299,9 +300,9 @@ Hugoでできること
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
@@ -317,9 +318,9 @@ Hugo用ブログテーマ「Salt」とは？
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
