--- a/article/sample/markdown/index.html
+++ b/article/sample/markdown/index.html
@@ -3,16 +3,17 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>マークダウン表示サンプル | Hugo用ブログテーマ「Salt」</title>
+<title>マークダウン表示サンプル | シンプルなHugoブログテーマ「Salt」</title>
 <meta name=description content="マークダウンで記事作成時の表示サンプルです Block Elements Headers 見出し 先頭に#をレベルの数だけ記述します。 # 見出し1 ## 見出し2 ### 見出し3 #### 見出し4 ##### 見出し5 ###### 見出し6 見出し1 見出し2 見出し3 見出し4 見出し5 見出し6 Block 段落 空白行を挟むことで段落となります。 段落1 (空行) 段落2 段落1 段落2 Br 改行 改行の前に半角スペース を2つ記述します。 hoge fuga(スペース2つ) piyo hoge fuga piyo Blockquotes 引用 先頭に>を記述します。ネストは>">
-<meta property="og:title" content="マークダウン表示サンプル | Hugo用ブログテーマ「Salt」">
+<meta property="og:title" content="マークダウン表示サンプル | シンプルなHugoブログテーマ「Salt」">
 <meta property="og:description" content="マークダウンで記事作成時の表示サンプルです Block Elements Headers 見出し 先頭に#をレベルの数だけ記述します。 # 見出し1 ## 見出し2 ### 見出し3 #### 見出し4 ##### 見出し5 ###### 見出し6 見出し1 見出し2 見出し3 見出し4 見出し5 見出し6 Block 段落 空白行を挟むことで段落となります。 段落1 (空行) 段落2 段落1 段落2 Br 改行 改行の前に半角スペース を2つ記述します。 hoge fuga(スペース2つ) piyo hoge fuga piyo Blockquotes 引用 先頭に>を記述します。ネストは>"><meta property="og:image" content="https://hugo-theme-salt.okdyy75.com/article/sample/markdown/thumbnail_hu8b2715e95ad414c90d2dcb05e7a44358_7366_1200x630_fill_q75_h2_box_center_3.webp"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/article/sample/markdown/">
-<meta property="og:site_name" content="Hugo用ブログテーマ「Salt」">
+<meta property="og:site_name" content="シンプルなHugoブログテーマ「Salt」">
 <meta property="og:type" content="article">
-<meta name=twitter:title content="マークダウン表示サンプル | Hugo用ブログテーマ「Salt」">
+<meta name=twitter:title content="マークダウン表示サンプル | シンプルなHugoブログテーマ「Salt」">
 <meta name=twitter:description content="マークダウンで記事作成時の表示サンプルです Block Elements Headers 見出し 先頭に#をレベルの数だけ記述します。 # 見出し1 ## 見出し2 ### 見出し3 #### 見出し4 ##### 見出し5 ###### 見出し6 見出し1 見出し2 見出し3 見出し4 見出し5 見出し6 Block 段落 空白行を挟むことで段落となります。 段落1 (空行) 段落2 段落1 段落2 Br 改行 改行の前に半角スペース を2つ記述します。 hoge fuga(スペース2つ) piyo hoge fuga piyo Blockquotes 引用 先頭に>を記述します。ネストは>"><meta name=twitter:image content="https://hugo-theme-salt.okdyy75.com/article/sample/markdown/thumbnail_hu8b2715e95ad414c90d2dcb05e7a44358_7366_1200x630_fill_q75_h2_box_center_3.webp">
 <meta name=twitter:card content="summary_large_image"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
+<meta name=generator content="Hugo 0.88.1">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/article/sample/markdown/>
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.eb0a54f2e1d0f7b35f779a7497900a228bf49cc827ca5747b52149d10994f888.css>
@@ -28,7 +29,7 @@
 <div class=partials__header>
 <div class=partials__header__title>
 <a href=https://hugo-theme-salt.okdyy75.com>
-Hugo用ブログテーマ「Salt」
+シンプルなHugoブログテーマ「Salt」
 </a>
 <div id=hamburger class="spShow close partials__header__hamburger">
 <div class=partials__header__hamburger__line></div>
@@ -518,9 +519,9 @@ Hugoでできること
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
@@ -536,9 +537,9 @@ Hugo用ブログテーマ「Salt」とは？
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
