--- a/article/sample/hugo-shortcode/index.html
+++ b/article/sample/hugo-shortcode/index.html
@@ -3,16 +3,17 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Hugo標準のショートコード表示サンプル | Hugo用ブログテーマ「Salt」</title>
+<title>Hugo標準のショートコード表示サンプル | シンプルなHugoブログテーマ「Salt」</title>
 <meta name=description content="Hugoで用意されているショートコード使用時の表示サンプルです figure スイカの画像 gist highlight <section id=&#34;main&#34;> <div> <h1 id=&#34;title&#34;>{{ .Title }}</h1> {{ range .Pages }} {{ .Render &#34;summary&#34;}} {{ end }} </div> </section> instagram Instagramのdeveloperアカウントが必要です。自前で用意する必要あり tweet Hugo 0.24 Released: Big archetype update + @Netlify _redirects etc. file supporthttps://t.co/X94FmYDEZJ #gohugo #golang @spf13 @bepsays &mdash; GoHugo.io (@GoHugoIO) June 21, 2017 vimeo youtube">
-<meta property="og:title" content="Hugo標準のショートコード表示サンプル | Hugo用ブログテーマ「Salt」">
+<meta property="og:title" content="Hugo標準のショートコード表示サンプル | シンプルなHugoブログテーマ「Salt」">
 <meta property="og:description" content="Hugoで用意されているショートコード使用時の表示サンプルです figure スイカの画像 gist highlight <section id=&#34;main&#34;> <div> <h1 id=&#34;title&#34;>{{ .Title }}</h1> {{ range .Pages }} {{ .Render &#34;summary&#34;}} {{ end }} </div> </section> instagram Instagramのdeveloperアカウントが必要です。自前で用意する必要あり tweet Hugo 0.24 Released: Big archetype update + @Netlify _redirects etc. file supporthttps://t.co/X94FmYDEZJ #gohugo #golang @spf13 @bepsays &mdash; GoHugo.io (@GoHugoIO) June 21, 2017 vimeo youtube"><meta property="og:image" content="https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/thumbnail_hu3e76b4d1d3cd4901770e54ca242e78fa_5891_1200x630_fill_q75_h2_box_center_3.webp"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/">
-<meta property="og:site_name" content="Hugo用ブログテーマ「Salt」">
+<meta property="og:site_name" content="シンプルなHugoブログテーマ「Salt」">
 <meta property="og:type" content="article">
-<meta name=twitter:title content="Hugo標準のショートコード表示サンプル | Hugo用ブログテーマ「Salt」">
+<meta name=twitter:title content="Hugo標準のショートコード表示サンプル | シンプルなHugoブログテーマ「Salt」">
 <meta name=twitter:description content="Hugoで用意されているショートコード使用時の表示サンプルです figure スイカの画像 gist highlight <section id=&#34;main&#34;> <div> <h1 id=&#34;title&#34;>{{ .Title }}</h1> {{ range .Pages }} {{ .Render &#34;summary&#34;}} {{ end }} </div> </section> instagram Instagramのdeveloperアカウントが必要です。自前で用意する必要あり tweet Hugo 0.24 Released: Big archetype update + @Netlify _redirects etc. file supporthttps://t.co/X94FmYDEZJ #gohugo #golang @spf13 @bepsays &mdash; GoHugo.io (@GoHugoIO) June 21, 2017 vimeo youtube"><meta name=twitter:image content="https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/thumbnail_hu3e76b4d1d3cd4901770e54ca242e78fa_5891_1200x630_fill_q75_h2_box_center_3.webp">
 <meta name=twitter:card content="summary_large_image"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
+<meta name=generator content="Hugo 0.88.1">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/article/sample/hugo-shortcode/>
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.eb0a54f2e1d0f7b35f779a7497900a228bf49cc827ca5747b52149d10994f888.css>
@@ -28,7 +29,7 @@
 <div class=partials__header>
 <div class=partials__header__title>
 <a href=https://hugo-theme-salt.okdyy75.com>
-Hugo用ブログテーマ「Salt」
+シンプルなHugoブログテーマ「Salt」
 </a>
 <div id=hamburger class="spShow close partials__header__hamburger">
 <div class=partials__header__hamburger__line></div>
@@ -402,9 +403,9 @@ Hugoでできること
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
@@ -420,9 +421,9 @@ Hugo用ブログテーマ「Salt」とは？
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
