--- a/pickups/sidebar/index.html
+++ b/pickups/sidebar/index.html
@@ -3,15 +3,16 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>sidebar | Hugo用ブログテーマ「Salt」</title>
+<title>sidebar | シンプルなHugoブログテーマ「Salt」</title>
 <meta name=description content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです">
-<meta property="og:title" content="sidebar | Hugo用ブログテーマ「Salt」">
+<meta property="og:title" content="sidebar | シンプルなHugoブログテーマ「Salt」">
 <meta property="og:description" content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/pickups/sidebar/">
-<meta property="og:site_name" content="Hugo用ブログテーマ「Salt」">
+<meta property="og:site_name" content="シンプルなHugoブログテーマ「Salt」">
 <meta property="og:type" content="article">
-<meta name=twitter:title content="sidebar | Hugo用ブログテーマ「Salt」">
+<meta name=twitter:title content="sidebar | シンプルなHugoブログテーマ「Salt」">
 <meta name=twitter:description content="このサイトはHugo用ブログテーマ「Salt」のサンプルサイトです"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
+<meta name=generator content="Hugo 0.88.1">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/pickups/sidebar/>
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.eb0a54f2e1d0f7b35f779a7497900a228bf49cc827ca5747b52149d10994f888.css>
@@ -26,7 +27,7 @@
 <div class=partials__header>
 <div class=partials__header__title>
 <a href=https://hugo-theme-salt.okdyy75.com>
-Hugo用ブログテーマ「Salt」
+シンプルなHugoブログテーマ「Salt」
 </a>
 <div id=hamburger class="spShow close partials__header__hamburger">
 <div class=partials__header__hamburger__line></div>
@@ -88,9 +89,9 @@ Hugoを使い始めた人に捧げるTips12選
 <article class=partials__articleCard>
 <div class=partials__articleCard__inner>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__articleCard__link></a>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_640x360_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__articleCard__thumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_640x360_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__articleCard__thumbnail>
 <h4 class=partials__articleCard__title>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </h4>
 <ul class=partials__tagList>
 <li class=partials__tagList__item>
@@ -334,9 +335,9 @@ Hugoでできること
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
@@ -352,9 +353,9 @@ Hugo用ブログテーマ「Salt」とは？
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
