--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -3,15 +3,16 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>プライバシーポリシー | Hugo用ブログテーマ「Salt」</title>
-<meta name=description content="Hugo用ブログテーマ「Salt」（以下、「当サイト」といいます。）は、本ウェブサイト上で提供するサービスにおけるユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。 個人情報の利用目的 当サイトが個人情報を収集・利用する目的は、以下のとおりです。 当サイトサービスの提供・運営のため 不正・不当な目的でサービスを利用しようとするユーザーの特定">
-<meta property="og:title" content="プライバシーポリシー | Hugo用ブログテーマ「Salt」">
-<meta property="og:description" content="Hugo用ブログテーマ「Salt」（以下、「当サイト」といいます。）は、本ウェブサイト上で提供するサービスにおけるユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。 個人情報の利用目的 当サイトが個人情報を収集・利用する目的は、以下のとおりです。 当サイトサービスの提供・運営のため 不正・不当な目的でサービスを利用しようとするユーザーの特定"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/privacy-policy/">
-<meta property="og:site_name" content="Hugo用ブログテーマ「Salt」">
+<title>プライバシーポリシー | シンプルなHugoブログテーマ「Salt」</title>
+<meta name=description content="このサイトはシンプルなHugoブログテーマ「Salt」（以下、「当サイト」といいます。）は、本ウェブサイト上で提供するサービスにおけるユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。 個人情報の利用目的 当サイトが個人情報を収集・利用する目的は、以下のとおりです。 当サイトサービスの提供・運営のため 不正・不当な目的でサービスを利用しよう">
+<meta property="og:title" content="プライバシーポリシー | シンプルなHugoブログテーマ「Salt」">
+<meta property="og:description" content="このサイトはシンプルなHugoブログテーマ「Salt」（以下、「当サイト」といいます。）は、本ウェブサイト上で提供するサービスにおけるユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。 個人情報の利用目的 当サイトが個人情報を収集・利用する目的は、以下のとおりです。 当サイトサービスの提供・運営のため 不正・不当な目的でサービスを利用しよう"><meta property="og:url" content="https://hugo-theme-salt.okdyy75.com/privacy-policy/">
+<meta property="og:site_name" content="シンプルなHugoブログテーマ「Salt」">
 <meta property="og:type" content="article">
-<meta name=twitter:title content="プライバシーポリシー | Hugo用ブログテーマ「Salt」">
-<meta name=twitter:description content="Hugo用ブログテーマ「Salt」（以下、「当サイト」といいます。）は、本ウェブサイト上で提供するサービスにおけるユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。 個人情報の利用目的 当サイトが個人情報を収集・利用する目的は、以下のとおりです。 当サイトサービスの提供・運営のため 不正・不当な目的でサービスを利用しようとするユーザーの特定"><meta name=robots content="index,follow">
+<meta name=twitter:title content="プライバシーポリシー | シンプルなHugoブログテーマ「Salt」">
+<meta name=twitter:description content="このサイトはシンプルなHugoブログテーマ「Salt」（以下、「当サイト」といいます。）は、本ウェブサイト上で提供するサービスにおけるユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。 個人情報の利用目的 当サイトが個人情報を収集・利用する目的は、以下のとおりです。 当サイトサービスの提供・運営のため 不正・不当な目的でサービスを利用しよう"><meta name=robots content="index,follow">
 <meta name=googlebot content="index,follow">
+<meta name=generator content="Hugo 0.88.1">
 <link rel=icon href=https://hugo-theme-salt.okdyy75.com/favicon.ico>
 <link rel=canonical href=https://hugo-theme-salt.okdyy75.com/privacy-policy/>
 <link rel=stylesheet href=https://hugo-theme-salt.okdyy75.com/scss/style.min.eb0a54f2e1d0f7b35f779a7497900a228bf49cc827ca5747b52149d10994f888.css>
@@ -27,7 +28,7 @@
 <div class=partials__header>
 <div class=partials__header__title>
 <a href=https://hugo-theme-salt.okdyy75.com>
-Hugo用ブログテーマ「Salt」
+シンプルなHugoブログテーマ「Salt」
 </a>
 <div id=hamburger class="spShow close partials__header__hamburger">
 <div class=partials__header__hamburger__line></div>
@@ -81,7 +82,7 @@ Hugo用ブログテーマ「Salt」
  / <i class="fas fa-sync-alt"></i>2021-08-31
 </div>
 <div class="single__article__content markdown-body">
-<p>Hugo用ブログテーマ「Salt」（以下、「当サイト」といいます。）は、本ウェブサイト上で提供するサービスにおけるユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。</p>
+<p>このサイトはシンプルなHugoブログテーマ「Salt」（以下、「当サイト」といいます。）は、本ウェブサイト上で提供するサービスにおけるユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。</p>
 <h2 id=個人情報の利用目的>個人情報の利用目的</h2>
 <p>当サイトが個人情報を収集・利用する目的は、以下のとおりです。</p>
 <ul>
@@ -288,9 +289,9 @@ Hugoでできること
 </li>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
@@ -306,9 +307,9 @@ Hugo用ブログテーマ「Salt」とは？
 <ul class=partials__sidebar__article__items>
 <li class=partials__sidebar__article__item>
 <a href=https://hugo-theme-salt.okdyy75.com/article/salt/about/ class=partials__sidebar__article__itemLink>
-<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=Hugo用ブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
+<img src=https://hugo-theme-salt.okdyy75.com/article/salt/about/thumbnail_huc1633a480d1f14d3ad339ce0d839c0d3_2170_192x108_fill_q75_h2_box_center_3.webp alt=シンプルなHugoブログテーマ「Salt」とは？ loading=lazy class=partials__sidebar__article__itemThumbnail>
 <div class=partials__sidebar__article__itemTitle>
-Hugo用ブログテーマ「Salt」とは？
+シンプルなHugoブログテーマ「Salt」とは？
 </div>
 </a>
 </li>
